# cplus-systems-programming

./: .gitignore  CMakeLists.txt  README.md
assignment-1/: CMakeLists.txt  main.cpp
assignment-1/lib/: CMakeLists.txt  test.cpp  test.hpp
assignment-1/lib/include/: random_engine_manager.hpp  random_generator.hpp  split_join.hpp
assignment-1/lib/src/: random_engine_manager.cpp  random_generator.cpp  split_join.cpp
assignment-1/src/: main.cpp
assignment-2/: CMakeLists.txt
assignment-2/data/: input.txt
assignment-2/include/: iplugin.hpp  plugin_wrapper.hpp
assignment-2/plugins/: CMakeLists.txt  lowercase_plugin.cpp  lowercase_plugin.hpp  myplugin.cpp  myplugin.hpp  vowel_remover_plugin.cpp  vowel_remover_plugin.hpp
assignment-2/src/: main.cpp  plugin_wrapper.cpp
assignment-3/: CMakeLists.txt  main.cpp
assignment-3/plugins/: CMakeLists.txt  fail_plugin.cpp  fail_plugin.hpp  success_plugin.cpp  success_plugin.hpp  test_plugin.cpp  test_plugin.hpp
assignment-3/sample/: CMakeLists.txt  sample.cpp
assignment-3/shared/: iplugin.hpp
assignment-3/test/: CMakeLists.txt  main.cpp
assignment-4/: CMakeLists.txt  main.cpp
assignment-4/include/: file_handler.hpp
assignment-4/src/: file_handler.cpp  main.cpp
assignment-5/: CMakeLists.txt
assignment-5/client/: CMakeLists.txt  main.cpp
assignment-5/server/: CMakeLists.txt  main.cpp
assignment-5/server/data/: nl.words.txt
assignment-5/shared/: networking.cpp  networking.hpp  throw.cpp  throw.hpp
